paf/Vjezbe7/vj7.txt
PS C:\Users\Evan Robin Brooks\Desktop\paf\Vjezbe7> g++ -o zad1.exe zad1.cpp Particle.cpp -I.
Particle.cpp:29:1: error: no declaration matches 'Particle::Particle(double, double, double, double)'
   29 | Particle::Particle(double v, double angle, double x0, double y0)
      | ^~~~~~~~
In file included from Particle.cpp:1:
./Particle.h:2:7: note: candidates are: 'constexpr Particle::Particle(const Particle&)'
    2 | class Particle {
      |       ^~~~~~~~
./Particle.h:11:5: note:                 'Particle::Particle(double, double, double, double, double)'
   11 |     Particle(double v, double angle, double x0, double y0, double step=0.001);
      |     ^~~~~~~~
./Particle.h:2:7: note: 'class Particle' defined here
    2 | class Particle {
      |       ^~~~~~~~
